Add Hibernate dependency

--- a/.classpath
+++ b/.classpath
@@ -23,5 +23,6 @@
 	<classpathentry kind="lib" path="com.miglayout.core_11.3.0.jar"/>
 	<classpathentry kind="lib" path="com.miglayout.swing_11.3.0.jar"/>
 	<classpathentry kind="lib" path="lib/flatlaf-3.4.1.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-core-6.5.2.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
